syntax = "proto3";

import "google/protobuf/any.proto";
option go_package = "github.com/omecodes/omestore/pb/api.proto;oms";

enum AllowedTo {
  doNothing = 0;
  create = 1;
  read = 2;
  write = 4;
  delete = 8;
  editAcl = 16;
  graft = 32;
  doAnything = 63;
}

message RelationDef {
  string name = 1;
  bool equivalence = 2;
}

message Header {
  string id = 1;
  string created_by = 2;
  int64 created_at = 3;
  int64 size = 4;
}

message AccessRules {
  repeated string read = 1;
  repeated string write = 2;
}

message PathAccessRules {
  map<string, AccessRules> access_rules = 5;
}

message Auth {
  string uid = 1;
  string email = 2;
  bool worker = 3;
  bool validated = 4;
  repeated string scope = 5;
  string group = 6;
}

message Perm {
  bool read = 1;
  bool write = 2;
  bool delete = 3;
  bool edit_rules = 4;
  bool graft = 5;
}

message OperationParams {
  string func = 1;
  string path = 2;
  string value = 3;
}

message Conditions {
  repeated google.protobuf.Any items = 1;
}